--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<a href="#gallery" class="icon fa-camera"><span>Gallery</span></a>
 						<a href="#about" class="icon fa-user"><span>About Me</span></a>
 						<a href="https://twitter.com/irahulrana" class="icon fa-twitter"><span>Twitter</span></a>
+                        <a href="https://www.instagram.com/ranarahul/" class="icon fa-instagram"><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
